css/style.css
html, body {
    font-family: "Open Sans", sans-serif;
    margin: 0;
    padding: 0;
}
	  
h1 {
    font-size: 35px;
    font-weight: 100;
}

h2 {
    font-size: 2em;
    font-weight: 100;
}

h3 {
    font-size: 24px;
}

h4 {
    font-size: 18px;
}

h5 {
    font-size: 14px;
    letter-spacing: 0.8px;
}

p, li {
    font-size: 15px;
    letter-spacing: 0.8px;
    line-height: 170%;
}

a, a:hover, a:focus, a:active {
    color: inherit;
    text-decoration: none;
}

code {
    color: #337ab7;
    background-color: #f2f4f9;
}

.container-fluid {
    padding-right: 5px;
    padding-left: 5px;
}

/* Navigation Bar */
.fixed-top {
    padding: 2em 10% 1em 10%;
}

.navbar-brand {
    font-size: 25px;
    font-weight: 700;
    letter-spacing: 1px;
}

.navbar-light .navbar-nav .nav-link,
.navbar-light .navbar-nav .nav-link:hover {
    padding: 0;
    margin-right: 0;
    margin-left: 30px;
    color: black;
    letter-spacing: 0.5px;
}

/* .navbar-toggler {
    background: transparent !important;
    border: none;
    margin-right: 0px;
    padding-right: 0;
}

.navbar-toggler:hover {
    background: transparent !important;
}


.navbar-toggler .icon-bar {
    background-color: black;
    width: 22px;
    transition: all 0.2s;  
}

.navbar-toggler .top-bar {
    transform: rotate(45deg);
    transform-origin: 10% 10%;
}

.navbar-toggler .middle-bar {
    opacity: 0;
}

.navbar-toggler .bottom-bar {
    transform: rotate(-45deg);
    transform-origin: 10% 90%;
}

.navbar-toggler .collapsed .top-bar {
    transform: rotate(0);
}

.navbar-toggler .collapsed .middle-bar {
    opacity: 1;
}

.navbar-toggler .collapsed .bottom-bar {
    transform: rotate(0);
} */

.underline {
    color: #000;
    display: inline-block;
    text-decoration: none;
}

.underline::after {
    background: #000;
    display: block;	
    content: '';
    height: 1.4px;
    width: 0;
    transition: width .3s;
}

.underline:hover:after {
    width: 100%;
    transition: width .3s;
}

/*Splash*/
.section-container {
    margin: 0 10%;
}

.inner-container {
    position: relative;
    height: 100vh;
    display: flex;
    align-items: center;
}

/* .splash {
    font-family: "Work Sans", sans-serif;
} */

.splash h1 {
    line-height: 49px;
    margin-top: 15px;
    margin-bottom: 0;
    font-weight: 500;
}

.splash h5 {
    font-family: "Work Sans", sans-serif;
    text-transform: uppercase;
    font-weight: 600;
    margin-top: 0;
    margin-bottom: 10px;
}

.down {
    position: absolute;
    width: 100%;
    display: flex;
    justify-content: center;
    bottom: 20px;
    font-size: 30px;
}

/*Tags*/
.tag-list {
    display: flex;
    align-items: center;
    margin-bottom: 20px;
}

.index-tag {
    margin-right: 10px;
    padding: 10px 16px;
    border-radius: 20px;
}

.index-tag:hover, .active {
    background-color: #f4f4f5;
    cursor: pointer;
    transition: 500ms;
}

.index-tag h6 {
    letter-spacing: 1.5px;
    text-transform: uppercase;
    font-size: 13px;
    margin: 0;
}

.project-tag {
    width: 100%;
    margin-top: 15px;
}

.project-tag .index-tag {
    margin: 30px 10px 0px 0px;
}

.project-tag .tag-list {
    justify-content: center;
}

/* Portfolio */
.portfolio-section {
    margin-top: 50px;
}

.about-section, .project-section {
    padding: 110px 0 0 0;
}

.portfolio-section, .about-section {
    width: 100%;
}

.portfolio-section .col-sm-6, .project-section .col-md-4 {
    padding-right: 10px;
    padding-left: 10px;
    margin-bottom: 20px;
}

.project {
    position: relative;
}

.project figcaption {
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    top: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    opacity: 0;
    transition: 0.5s;
    z-index: 1;
}

.project figcaption:hover {
    opacity: 1;
}

.project h3,
.project h5 {
    font-weight: bold;
    letter-spacing: 1px;
    margin: 0;
}

.project h5 {
    font-size: 16px;
    font-style: italic;
    font-weight: normal;
    padding: 5px;
    -webkit-transform: translateY(100%);
    transform: translateY(100%);
    transition: 0.5s;
}

.project:hover h5 {
    -webkit-transform: translateY(0);
    transform: translateY(0);
}

.project:hover > img {
    opacity: 0.1;
    transition: 100ms;
}

.category__image {
    max-width: 100%;
    max-height: 100%;
    object-fit: cover;
    height: 100%;
    width: 100%;
}

/* Individual Work Descriptions */
.post-content {
    padding: 30px 0 25px;
    overflow: auto;
    margin: 0;
}

.post-content a {
    color: #337ab7;
}

.post-content a:hover {
    color: #5CADDC;
    text-decoration: none;
}

.description {
    float: left;
    padding-right: 13px;
}

.description h4 {
    margin-top: 30px;
    text-transform: uppercase;
    letter-spacing: 0.5px;
}

.tags {
    width: 25%;
    padding: 0 10pt 0pt 0;
    float: right;
}

.project-link {
    text-align: center;
    user-select: none;
}

.project-link a {
    color: black;
    margin: 10px;
}

/*Project List*/
.project-list {
    padding-top: 50px;
    text-align: center;
}

.project-list a {
    color: black;
    text-decoration: none;
}

.project-list p {
    font-size: 18px;
    font-weight: 400;
}

.project-list a:hover {
    color: #337ab7;
}


.click {
    background-color: white;
    border: 1.5px solid black;
    padding: 10px 15px;;
    letter-spacing: 1px;
    font-size: 15px;
    transition: 0.3s;
}

.click:hover {
    color: white;
    background-color: black;
    transition: 0.5s;
}

.click:focus {
    outline: none;
}

.click i {
    letter-spacing: 10px;
}

/* Daily UI Gallery */
.gallery {
    margin-bottom: 30px;
}

.gallery-item {
    position: relative;
}

.gallery-item figcaption {
    position: absolute;
    font-size: 11px;
    line-height: 16px;
    letter-spacing: 4px;
    background-color: rgba(255, 255, 255, .96);
    opacity: 0;
    bottom: 10px;
    left: 10px;
    margin-right: 30px;
    padding: 8px 12px;
    text-transform: uppercase;
    text-align: left;
    -webkit-transform: translateY(10px);
    -ms-transform: translateY(10px);
    transform: translateY(10px);
    -webkit-transition-duration: .2s;
    transition-duration: .2s;
}

.gallery-item:hover figcaption {
    opacity: 1;
    -webkit-transform: translateY(0px);
    -ms-transform: translateY(0px);
    transform: translateY(0px);
}

/*Social Media Footer*/
.social-media-bar {
    float: right;
    padding: 30px 0px;
}

.social-media-bar a {
    color: #555;
    font-size: 17px;
    margin-left: 15px;
}

.social-media-bar a:hover {
    color: #000;
    background-color: transparent;
}

@media (min-width: 768px) {
    .navbar-nav > li > a {
        padding: 0;
    }
}

@media (max-width: 767px) {
    .navbar-nav a {
        font-size: 2em;
    }
    .underline::after {
        content: none;
        display: none;
    }
    .social-media-bar {
        float: none;
        text-align: center;
    }
    .social-media-bar a {
        padding: 0px 15px;
    }
}

@media (max-width: 667px) {
    h1 {
        font-size: 2.3em;
    }
}

@media (max-width: 414px) {
    .description, .tags {
        padding: 0;
        width: 100%;
        float: none;
    }
    .project-link a {
        margin: 3px;
    }
    .click {
        padding: 10px 9px;
    }
    .project-tag .index-tag {
        margin: 10px 10px 0px 0px;
    }
}

